[gd_scene load_steps=4 format=3 uid="uid://dpicmplffpula"]

[ext_resource type="Script" path="res://scenes/settings/settings_controls.gd" id="1_n5jcg"]
[ext_resource type="Script" path="res://scenes/settings/fullscreen_toggle.gd" id="2_xaxe3"]
[ext_resource type="Script" path="res://scenes/settings/back_button.gd" id="5_uk7ws"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.501961, 0.223529, 0.27451, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.5
offset_top = 30.0
offset_right = 54.5
offset_bottom = 72.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "Settings"
horizontal_alignment = 1

[node name="SettingsControls" type="VFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = 55.0
offset_right = 234.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_n5jcg")

[node name="FullscreenToggle" type="CheckButton" parent="SettingsControls"]
layout_mode = 2
text = "Fullscreen"
script = ExtResource("2_xaxe3")

[node name="MasterLabel" type="Label" parent="SettingsControls"]
layout_mode = 2
text = "Master"
horizontal_alignment = 1

[node name="MasterVolume" type="HSlider" parent="SettingsControls"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicLabel" type="Label" parent="SettingsControls"]
layout_mode = 2
text = "Music"
horizontal_alignment = 1

[node name="MusicVolume" type="HSlider" parent="SettingsControls"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="SettingsControls"]
layout_mode = 2
text = "SFX"
horizontal_alignment = 1

[node name="SFXVolume" type="HSlider" parent="SettingsControls"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackButton" type="Button" parent="SettingsControls"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"
flat = true
script = ExtResource("5_uk7ws")

[connection signal="toggled" from="SettingsControls/FullscreenToggle" to="SettingsControls/FullscreenToggle" method="_on_toggled"]
[connection signal="value_changed" from="SettingsControls/MasterVolume" to="SettingsControls" method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="SettingsControls/MusicVolume" to="SettingsControls" method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="SettingsControls/SFXVolume" to="SettingsControls" method="_on_sfx_volume_value_changed"]
[connection signal="pressed" from="SettingsControls/BackButton" to="SettingsControls/BackButton" method="_on_pressed"]
